--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mammoth": "^1.11.0",
     "nanoid": "^5.1.6",
     "oidc-client-ts": "3.4.1",
+    "pdfjs-dist": "^5.4.624",
     "pptx-preview": "^1.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
