--- a/packages/agents/research-agent/pyproject.toml
+++ b/packages/agents/research-agent/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "aws-opentelemetry-distro>=0.14.2",
     "bedrock-agentcore>=1.1.0,<1.2.0",
     "boto3>=1.42.36",
+    "duckduckgo-mcp-server>=0.1.1",
     "nanoid>=2.0.0",
     "pydantic>=2.12.5",
     "pydantic-settings>=2.12.0",
